Fix CIO and Jetty docker config